--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
-spring.mail.host = mail.gepron.com.br
+spring.mail.host = smtp.gepron.com.br
 spring.mail.username = orse@gepron.com.br
 spring.mail.password = Haskel00*
 spring.mail.port=587
