--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
-spring.mail.host = mail.gepron.com.br
-spring.mail.username = orse@gepron.com.br
-spring.mail.password = Haskel00*
+spring.mail.host = smtp.gemail.com
+spring.mail.username = johaskel@gmail.com
+spring.mail.password = 3008nicolas
 spring.mail.port=465
 spring.mail.properties.mail.smtp.starttls.enable = true
 #spring.mail.properties.mail.smtp.starttls.enable = true
