--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
-spring.mail.host = smtp.gemail.com
+spring.mail.host = smtp.gmail.com
 spring.mail.username = johaskel@gmail.com
 spring.mail.password = 3008nicolas
 spring.mail.port=587
