--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.mail.host = smtp.gmail.com
 spring.mail.username = app.orse@gmail.com
-spring.mail.password = Haskel00*
+spring.mail.password = Haskel00
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable = true
 #spring.mail.properties.mail.smtp.starttls.enable = true
