--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.mail.host = smtp.gmail.com
-spring.mail.username = app.orse@gmail.com
-spring.mail.password = Haskel00
+spring.mail.username = orse.app@gmail.com
+spring.mail.password = Haskel00*
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable = true
 #spring.mail.properties.mail.smtp.starttls.enable = true
