--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,30 +1,17 @@
 # MySQL
 
-spring.datasource.url=jdbc:mysql://localhost:3306/orse?useSSL=false&allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/gepronco_orse?useSSL=false&allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=GMT
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
-
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
-#SQL.
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=update
-
-# logging
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
-#logging.level.org.hibernate.SQL=debug
+pring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #SQL.
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
-spring.mail.host = smtp.gmail.com
-spring.mail.username = johaskel@gmail.com
-spring.mail.password = 3008nicolas
-spring.mail.port=587
-spring.mail.properties.mail.smtp.starttls.enable = true
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
