--- a/src/main/resources/env/mail.properties
+++ b/src/main/resources/env/mail.properties
@@ -1,4 +1,4 @@
 mail.smtp.host=smtp.gmail.com
-mail.smtp.port=993
+mail.smtp.port=587
 mail.smtp.username=johaskel@gmail.com
-mail.smtp.password=3008nicolas
+mail.smtp.password=mnmlH00*
